--- a/src/style/page/home.scss
+++ b/src/style/page/home.scss
@@ -27,7 +27,7 @@ background-color: $beige-4;
         background: url('../../../public/asset/pete.jpg')no-repeat;
         border: 2px solid $beige-2;
         border-radius: 25px;
-        height: 100%;
+        height: 800px;
         width: 100%;
         object-fit: contain;
     
@@ -47,7 +47,6 @@ background-color: $beige-4;
         grid-area: Article;
 
     }
+
 }
-
-
 }
