--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -2,4 +2,5 @@
 @import './component/header.scss';
 @import './component/articles.scss';
 @import './component/whatNew.scss';
+@import './component/footer.scss';
 @import './page/home.scss'
