--- a/src/style/component/header.scss
+++ b/src/style/component/header.scss
@@ -3,6 +3,14 @@
     height: 50px;
     display: flex;
     align-items: center;
+
+
+    .title{
+      // text-shadow: 4px 4px 2px rgba(215,50,50,0.6), 6px 6px 6px rgba(233,163,49,0.6), 15px 8px 8px rgba(47,148,246,0.6);;
+      font-size: 1.6rem;
+      font-family: 'Mochiy Pop P One', sans-serif;
+      
+    }
    
 
 
