--- a/src/style/settings.scss
+++ b/src/style/settings.scss
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&family=Roboto&display=swap');
+
+*{
+     font-family: 'Roboto', sans-serif;
+}
 $beige-1 : #faf6e9; 
 
 $beige-2: #ece8d9; 
