--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,6 @@
 @import './settings.scss';
 @import './component/header.scss';
 @import './component/articles.scss';
-@import './component/whatNew.scss';
+@import './component/block.scss';
 @import './component/footer.scss';
 @import './page/home.scss'
