--- a/src/style/component/articles.scss
+++ b/src/style/component/articles.scss
@@ -1,10 +1,16 @@
+.articles{
+
+
+}
+
+
 .choiceCategory{
   background-color: $beige-1;
 
   .choiceSkateGraf{
   background-color: $beige-4;
   color: $beige-2;
-    padding: 1.8rem;
+    padding: 1rem;
     font-size: 1.9rem;
     border: 2px solid $beige-2;
 
@@ -60,11 +66,11 @@
 .articlesContent{
 
     background-color: $beige-1;
-
-
-
-  .articlesList{
-
+    
+    
+    .articlesList{
+      
+    
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -89,7 +95,7 @@
 
 
     img{
-        height: 100%;
+
         width: 100%;
         object-fit: contain;
     }
